--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ title: Stianj.com
 
 projects: [
 {
+    "title":        "Composite",
+    "image":        "images/composite_preview@200px.jpg",
+    "description":  "Interactive prototypes straight from Photoshop to your iPhone",
+    "link":         "http://www.getcomposite.com/"
+},
+{
     "title":        "TUNL-MNTN-WTER",
     "image":        "images/tunlmntnwter_preview@200px.png",
     "description":  "WebGL demo made for Solskogen 2013. 5th place in newschool compo.",
