Fix windwill link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ projects: [
     "title":        "Windwill",
     "image":        "images/windwill_preview@200px.png",
     "description":  "An HTML5 Game written for the Bacon Game Jam in september 2012.",
-    "link":         "http://windwill.co/"
+    "link":         "http://arkt.is/windwill/"
 },
 {
     "title":        "KINK demo",
