Info about blast

--- a/cv/index.html
+++ b/cv/index.html
@@ -52,6 +52,11 @@ work: [
 
 projects: [
 {
+    "title": "BLAST",
+    "subtitle": "Anonymous location-based image sharing service for mobile devices.",
+    "startDate": "Under development"
+},
+{
     "title": "[Composite](http://www.getcomposite.com/)",
     "subtitle": "An iPhone app for prototyping apps with photoshop, by Panes Software.",
     "startDate": 2013
