Move projects data to new _data folder

--- a/index.html
+++ b/index.html
@@ -1,66 +1,22 @@
 ---
 layout: default
 title: Stianj.com
-
-projects: [
-{
-    "title":        "Composite",
-    "image":        "images/composite_preview@200px.jpg",
-    "description":  "Interactive prototypes straight from Photoshop to your iPhone",
-    "link":         "http://www.getcomposite.com/"
-},
-{
-    "title":        "TUNL-MNTN-WTER",
-    "image":        "images/tunlmntnwter_preview@200px.png",
-    "description":  "WebGL demo made for Solskogen 2013. 5th place in newschool compo.",
-    "link":         "http://stianj.com/skog/"
-},
-{
-    "title":        "Wikipendium",
-    "image":        "images/wikipendium_preview@200px.png",
-    "description":  "Compendiums edited as a wiki.",
-    "link":         "http://wikipendium.no/"
-},
-{
-    "title":        "Windwill",
-    "image":        "images/windwill_preview@200px.png",
-    "description":  "An HTML5 Game written for the Bacon Game Jam in september 2012.",
-    "link":         "http://arkt.is/windwill/"
-},
-{
-    "title":        "KINK demo",
-    "image":        "images/kink_preview@200px.png",
-    "description":  "A WebGL demo made before going to BEKK Robocup 2013. Written in javascript using THREE.js.",
-    "link":         "http://kinkdemo.com/"
-},
-{
-    "title":        "hip.",
-    "image":        "images/hip_preview@200px.png",
-    "description":  "For displaying large type in the browser.",
-    "link":         "http://hip.stianj.com/"
-},
-{
-    "title":        "Guide to DataGK [no]",
-    "image":        "images/datagk_preview@200px.png",
-    "description":  "A Web 1.0 like guide to passing the <em>Intro to computers</em> exam.",
-    "link":         "http://datagk.stianj.com/"
-},
-{
-    "title":        "Honeycomb",
-    "image":        "images/honeycomb_preview@200px.png",
-    "description":  "WebGL demo that won first place at Solskogen 2012.",
-    "link":         "http://arkt.is/honeycomb/"
-}
-]
 ---
 
 <div id="home">
-    {% for item in page.projects %}<div class=item>
-            <a href="{{ item.link }}">
-                <div class=image style="background-image:url('{{ item.image }}')">
-                </div>
-                <h2>{{ item.title }}</h2>
-            </a>
-            <p>{{ item.description }}</p>
-        </div>{% endfor %}
+    {% for category in site.data.projects %}
+    <div class=category>
+        {% if category.type %}
+            <h2>{{ category.type }}</h2>
+        {% endif %}
+        {% for item in category.items %}<div class=item>
+                <a href="{{ item.link }}">
+                    <div class=image style="background-image:url('{{ item.image }}')">
+                    </div>
+                    <h3>{{ item.title }}</h3>
+                </a>
+                <p>{{ item.description }}</p>
+            </div>{% endfor %}
+        </div>
+    {% endfor %}
 </div>
