Fix inakuwa oasis link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Stianj.com
                     </div>
                     <h3>{{ item.title }}</h3>
                 </a>
-                <p>{{ item.description }}</p>
+                <p>{{ item.description|markdownify }}</p>
             </div>{% endfor %}
         </div>
     {% endfor %}
