Update cv and style generation

--- a/cv/index.html
+++ b/cv/index.html
@@ -25,6 +25,12 @@ education: [
 
 work: [
 {
+    "title": "[Feat.fm](https://feat.fm)",
+    "subtitle": "Full-stack developer",
+    "startDate": "06. 2015",
+    "endDate": "08. 2015"
+},
+{
     "title": "[Nordic Semiconductor (summer internship)](http://nordicsemiconductor.github.io/puck/)",
     "subtitle": "Open source Bluetooth LE platform for mbed",
     "startDate": "06. 2014",
@@ -57,6 +63,16 @@ work: [
 ]
 
 projects: [
+{
+    "title": "[Everything is Fashion](http://stianj.com/fashion/)",
+    "subtitle": "WebGL and THREE.js demo created with Ninjadev's own tool, nin. Second place at Solskogen 2015",
+    "startDate": 2015
+},
+{
+    "title": "[Git Course](http://poetene.net/git/)",
+    "subtitle": "Intro course to git for all computer students at NTNU. Held by a group of five students, in cooperation with Abakus.",
+    "startDate": "2014 & 2015"
+},
 {
     "title": "[Inakuwa Oasis](http://arkt.is/inakuwa-oasis/)",
     "subtitle": "WebGL and THREE.js demo for Solskogen demo party 2014. Won first place in the combined compo.",
@@ -159,13 +175,13 @@ projects: [
     <div class=box>
         <h3>Skills</h3>
         <ul>
-            <li>Javascript</li>
+            <li>Javascript (Angular.js, ...)</li>
             <li>Node.js</li>
             <li>Python – Django</li>
-            <li>PHP</li>
             <li>HTML</li>
             <li>CSS/SASS</li>
-            <li>iOS</li>
+            <li>PHP</li>
+            <li>iOS (Objective C and Swift)</li>
             <li>Git</li>
             <li>Vim</li>
             <li>Photoshop</li>
