--- a/cv/index.html
+++ b/cv/index.html
@@ -7,7 +7,7 @@ education: [
     "title": "NTNU",
     "subtitle": "Masters degree in computer science",
     "startDate": 2011,
-    "endDate": "ongoing"
+    "endDate": "june 2016"
 },
 {
     "title": "Trondheim Katedralskole",
@@ -28,7 +28,7 @@ work: [
     "title": "[Feat.fm](https://feat.fm)",
     "subtitle": "Full-stack developer",
     "startDate": "06. 2015",
-    "endDate": "08. 2015"
+    "endDate": "03. 2016"
 },
 {
     "title": "[Nordic Semiconductor (summer internship)](http://nordicsemiconductor.github.io/puck/)",
@@ -45,8 +45,8 @@ work: [
 {
     "title": "[Panes Software ANS](http://panes.no/)",
     "subtitle": "Co-founder",
-    "startDate": "02.2011",
-    "endDate": "ongoing"
+    "startDate": "02. 2011",
+    "endDate": "03. 2016"
 },
 {
     "title": "Norges Bridgeforbund",
