--- a/cv/index.html
+++ b/cv/index.html
@@ -25,6 +25,11 @@ education: [
 
 work: [
 {
+    "title": "Telenor Digital",
+    "subtitle": "Software Engineer",
+    "startDate": "08. 2016"
+},
+{
     "title": "[Feat.fm](https://feat.fm)",
     "subtitle": "Full-stack developer",
     "startDate": "06. 2015",
@@ -175,7 +180,7 @@ projects: [
     <div class=box>
         <h3>Skills</h3>
         <ul>
-            <li>Javascript (Angular.js, ...)</li>
+            <li>Javascript (Angular.js, React, ...)</li>
             <li>Node.js</li>
             <li>Python – Django</li>
             <li>HTML</li>
