--- a/cv/index.html
+++ b/cv/index.html
@@ -121,7 +121,7 @@ projects: [
             <dt>Born:</dt>
             <dd>16.07.1991</dd>
             <dt>Address:</dt>
-            <dd>Dronningens gt. 27, 7012 Trondheim</dd>
+            <dd>Oscars Gate 70, 0256 Oslo</dd>
             <dt>Email:</dt>
             <dd><a href="mailto:me@stianj.com">me@stianj.com</a></dd>
             <dt>Phone:</dt>
