--- a/cv/index.html
+++ b/cv/index.html
@@ -26,7 +26,7 @@ education: [
 work: [
 {
     "title": "Telenor Digital",
-    "subtitle": "Software Engineer",
+    "subtitle": "Software Engineer in the Strategic Engineering department. Focus on technology driven innovation.",
     "startDate": "08. 2016"
 },
 {
@@ -37,7 +37,7 @@ work: [
 },
 {
     "title": "[Nordic Semiconductor (summer internship)](http://nordicsemiconductor.github.io/puck/)",
-    "subtitle": "Open source Bluetooth LE platform for mbed",
+    "subtitle": "Developed an open source Bluetooth LE platform for mbed",
     "startDate": "06. 2014",
     "endDate": "08. 2014"
 },
@@ -180,18 +180,19 @@ projects: [
     <div class=box>
         <h3>Skills</h3>
         <ul>
-            <li>Javascript (Angular.js, React, ...)</li>
-            <li>Node.js</li>
-            <li>Python – Django</li>
+            <li>Javascript (React, Angular.js 1.x, Webpack...)</li>
+            <li>Node.js (Express.js, Mongoose...)</li>
+            <li>Python (Django, Flask, Tornado)</li>
             <li>HTML</li>
-            <li>CSS/SASS</li>
+            <li>CSS/SASS/LESS</li>
             <li>PHP</li>
-            <li>iOS (Objective C and Swift)</li>
+            <li>iOS (Swift and Objective C)</li>
+            <li>Rust</li>
             <li>Git</li>
             <li>Vim</li>
             <li>Photoshop</li>
             <li>Bluetooth LE</li>
-            <li>WebGL</li>
+            <li>WebGL / Web Audio API / WebRTC</li>
         </ul>
     </div>
     <div class=box>
