Add mbed course to CV

--- a/cv/index.html
+++ b/cv/index.html
@@ -74,6 +74,11 @@ projects: [
     "startDate": 2015
 },
 {
+    "title": "[Bluetooth LE Course](https://bftj.github.io/)",
+    "subtitle": "Intro course to Bluetooth LE and mbed microncontroller programming at NTNU and HIST",
+    "startDate": "2015"
+},
+{
     "title": "[Git Course](http://poetene.net/git/)",
     "subtitle": "Intro course to git for all computer students at NTNU. Held by a group of five students, in cooperation with Abakus.",
     "startDate": "2014 & 2015"
