--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@ title: CV - Stian Jensen
 education: [
 {
     "title": "NTNU",
-    "subtitle": "Masters degree in computer science",
+    "subtitle": "Masters degree in computer science, w/ specialization in complex systems and machine learning.",
     "startDate": 2011,
     "endDate": "june 2016"
 },
@@ -30,14 +30,14 @@ work: [
     "startDate": "08. 2016"
 },
 {
-    "title": "[Feat.fm](https://feat.fm)",
-    "subtitle": "Full-stack developer",
+    "title": "Feat.fm (Music and concert streaming platform)",
+    "subtitle": "Full-stack developer. Frontend, backend, real-time chat, rtmp/hls streaming server.",
     "startDate": "06. 2015",
     "endDate": "03. 2016"
 },
 {
     "title": "[Nordic Semiconductor (summer internship)](http://nordicsemiconductor.github.io/puck/)",
-    "subtitle": "Developed an open source Bluetooth LE platform for mbed",
+    "subtitle": "Developed an open source Bluetooth LE platform for mbed microcontrollers.",
     "startDate": "06. 2014",
     "endDate": "08. 2014"
 },
@@ -69,13 +69,28 @@ work: [
 
 projects: [
 {
+    "title": "[What Are You Syncing About?](https://stianj.com/what-are-you-syncing-about/)",
+    "subtitle": "WebGL and THREE.js demo created with Ninjadev's internal demo tool, nin. Fourth place at Revision 2017, the world's largest demoscene event.",
+    "startDate": 2017
+},
+{
+    "title": "[Music Video Dispenser](https://musicvideodispenser.com)",
+    "subtitle": "An online YouTube music video generation service. It combines images with visualizations based on your music!",
+    "startDate": 2017
+},
+{
+    "title": "[Zombocam](https://zombocam.com)",
+    "subtitle": "A browser extension that allows you to put filters and effects on your webcam. It works on every website that uses your webcam!",
+    "startDate": 2016
+},
+{
     "title": "[Everything is Fashion](http://stianj.com/fashion/)",
-    "subtitle": "WebGL and THREE.js demo created with Ninjadev's own tool, nin. Second place at Solskogen 2015",
+    "subtitle": "WebGL and THREE.js demo created with Ninjadev's own tool, nin. Second place at Solskogen 2015.",
     "startDate": 2015
 },
 {
     "title": "[Bluetooth LE Course](https://bftj.github.io/)",
-    "subtitle": "Intro course to Bluetooth LE and mbed microncontroller programming at NTNU and HIST",
+    "subtitle": "Intro course to Bluetooth LE and mbed microncontroller programming at NTNU and HIST.",
     "startDate": "2015"
 },
 {
@@ -99,7 +114,7 @@ projects: [
     "startDate": 2013
 },
 {
-    "title": "[Wikipendium.no](http://wikipendium.no/)",
+    "title": "[Wikipendium.no](https://www.wikipendium.no/)",
     "subtitle": "Compendiums for university courses, that anyone can edit.",
     "startDate": "01. 2013",
     "endDate": "ongoing"
@@ -132,7 +147,7 @@ projects: [
       <dt>Phone:</dt>
       <dd>+47 482 72 582</dd>
       <dt>Github:</dt>
-      <dd><a href="http://github.com/stianjensen/">@stianjensen</a></dd>
+      <dd><a href="https://github.com/stianjensen/">@stianjensen</a></dd>
     </dl>
   </div>
 
@@ -195,9 +210,11 @@ projects: [
         <li>Rust</li>
         <li>Git</li>
         <li>Vim</li>
-        <li>Photoshop</li>
-        <li>Bluetooth LE</li>
+        <li>Linux / macOS</li>
+        <li>AWS + Terraform</li>
         <li>WebGL / Web Audio API / WebRTC</li>
+        <li>Bluetooth LE</li>
+        <li>Photoshop</li>
       </ul>
     </div>
     <div class=box>
