Update CV image

--- a/cv/index.html
+++ b/cv/index.html
@@ -134,7 +134,7 @@ projects: [
 
 
 <div id="home" class=cv>
-  <img src=/images/me.jpg class=me>
+  <img src=/images/stiaje.jpg class=me>
 
   <div class=contact>
     <dl>
