--- a/datagk/index.html
+++ b/datagk/index.html
@@ -28,7 +28,7 @@
             display: none;
         }
 		</STYLE>
-		<SCRIPT src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></SCRIPT>
+		<SCRIPT src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></SCRIPT>
 		<SCRIPT>
 		(function($) {
  $.fn.blink = function(time) {
