--- a/cv/index.html
+++ b/cv/index.html
@@ -25,9 +25,15 @@ education: [
 
 work: [
 {
+    "title": "Hyre AS",
+    "subtitle": "Software Engineer, co-founder.",
+    "startDate": "08. 2017"
+},
+{
     "title": "Telenor Digital",
     "subtitle": "Software Engineer in the Strategic Engineering department. Focus on technology driven innovation.",
-    "startDate": "08. 2016"
+    "startDate": "08. 2016",
+    "endDate": "08. 2017"
 },
 {
     "title": "Feat.fm (Music and concert streaming platform)",
@@ -141,7 +147,7 @@ projects: [
       <dt>Born:</dt>
       <dd>16.07.1991</dd>
       <dt>Address:</dt>
-      <dd>Oscars Gate 70, 0256 Oslo</dd>
+      <dd>Hans Nielsen Hauges Gate 6, 0481 Oslo</dd>
       <dt>Email:</dt>
       <dd><a href="mailto:me@stianj.com">me@stianj.com</a></dd>
       <dt>Phone:</dt>
@@ -200,11 +206,11 @@ projects: [
     <div class=box>
       <h3>Skills</h3>
       <ul>
-        <li>Javascript (React, Angular.js 1.x, Webpack...)</li>
+        <li>Javascript (React, React Native, Webpack...)</li>
         <li>Node.js (Express.js, Mongoose...)</li>
-        <li>Python (Django, Flask, Tornado)</li>
+        <li>Python (Django, Tornado)</li>
         <li>HTML</li>
-        <li>CSS/SASS/LESS</li>
+        <li>CSS/SASS</li>
         <li>PHP</li>
         <li>iOS (Swift and Objective C)</li>
         <li>Rust</li>
