--- a/hip/index.html
+++ b/hip/index.html
@@ -1,36 +1,3 @@
-<?php
-$welcome_messages = array(
-    "Write what you want...",
-    "How are you?",
-    "The intertubes",
-    "Ahoy",
-    "Just add words",
-    "Knock knock\nWho's there?"
-);
-$colors = array(
-    "light",
-    "dark",
-    "orange",
-    "blue",
-    "purple",
-    "red",
-    "green",
-    "brown"
-);
-
-if (array_key_exists('text', $_GET)) {
-    $text = strip_tags(rtrim($_GET['text']));
-} else {
-    $text = $welcome_messages[array_rand($welcome_messages)];
-}
-$text = str_replace("\n", "<br />", $text);
-
-$color = (array_key_exists('color', $_GET)) ? rtrim($_GET['color'], "/") : "";
-if (!in_array($color, $colors)) {
-    $color = $colors[array_rand($colors)];
-}
-$bg_color = $color . "-color";
-?>
 <!doctype html>
 <html>
 <head>
@@ -42,30 +9,32 @@ $bg_color = $color . "-color";
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.2/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="/static/style.css" />
 </head>
-<body class="<?php echo $bg_color; ?>">
+<body>
 <div id="centered" class="hbox center">
     <div id="bigtext" contenteditable=true spellcheck=false class="bigtext vbox center"><div>
         <?php echo $text; ?>
     </div></div>
 </div>
 <div id="toolbox">
-<ul>  
+<ul>
 <li>
-<input class="link-container" />
-    <a href=javascript:; id="share-link" class="icon-link"></a>
+  <input class="link-container" />
+  <a href=javascript:; id="share-link" class="icon-link"></a>
 </li>
 </ul>
 
-<ul class="color-tiles tile-selector">
-<?php foreach ($colors as $color): ?>
-    <li><a href="javascript:;" class="<?php echo $color; ?>-color"></a></li>
-<?php endforeach; ?>
-</ul>
+<ul class="color-tiles tile-selector"></ul>
 
 <ul class="background-tiles tile-selector">
-<?php for ($i=1; $i<=9; $i++): ?>
-<li><a href="javascript:;" class="background-<?php echo $i; ?>"></a></li>
-<?php endfor; ?>
+<li><a href="javascript:;" class="background-1"></a></li>
+<li><a href="javascript:;" class="background-2"></a></li>
+<li><a href="javascript:;" class="background-3"></a></li>
+<li><a href="javascript:;" class="background-4"></a></li>
+<li><a href="javascript:;" class="background-5"></a></li>
+<li><a href="javascript:;" class="background-6"></a></li>
+<li><a href="javascript:;" class="background-7"></a></li>
+<li><a href="javascript:;" class="background-8"></a></li>
+<li><a href="javascript:;" class="background-9"></a></li>
 </ul>
 
 </div>
@@ -74,9 +43,18 @@ $bg_color = $color . "-color";
 <script src=/static/bigtext.js></script>
 <script>
 (function(){
-    var fadeOut;
-    var bigtext = document.querySelector('#bigtext');
-    var toolbox = document.querySelector('#toolbox');
+    function strip_tags (input, allowed) {
+      allowed = (((allowed || '') + '').toLowerCase().match(/<[a-z][a-z0-9]*>/g) || []).join('');
+      const tags = /<\/?([a-z][a-z0-9]*)\b[^>]*>/gi;
+      const commentsAndPhpTags = /<!--[\s\S]*?-->|<\?(?:php)?[\s\S]*?\?>/gi;
+      return input.replace(commentsAndPhpTags, '').replace(tags, function ($0, $1) {
+        return allowed.indexOf('<' + $1.toLowerCase() + '>') > -1 ? $0 : '';
+      });
+    }
+
+    let fadeOut;
+    const bigtext = document.querySelector('#bigtext');
+    const toolbox = document.querySelector('#toolbox');
     $("#bigtext").bigtext();
     addEventListener('resize', function(){
         $('#bigtext').bigtext();
@@ -96,14 +74,16 @@ $bg_color = $color . "-color";
             toolbox.classList.remove('active');
         }, 1500);
     });
+
     $('.tile-selector').on('click', function(e){
         if (e.target.tagName != "A") return;
-        
+
         console.log("color: %s", e.target.className);
         document.body.className = e.target.className;
     });
+
     document.querySelector('#share-link').addEventListener('click', function(){
-        var url = "http://hip.stianj.com/";
+        var url = "https://hip.stianj.com/";
         for ( var i=0; i<bigtext.children.length; i++ ) {
             url += bigtext.children[i].innerText + "%0A";
         }
@@ -113,6 +93,53 @@ $bg_color = $color . "-color";
         container.classList.add('active');
         container.select();
     });
+
+    const welcome_messages = [
+      "Write what you want...",
+      "How are you?",
+      "The intertubes",
+      "Ahoy",
+      "Just add words",
+      "Knock knock\nWho's there?"
+    ];
+
+    const colors = [
+      "light",
+      "dark",
+      "orange",
+      "blue",
+      "purple",
+      "red",
+      "green",
+      "brown"
+    ];
+    const colorTilesContainer = document.querySelector('.color-tiles');
+    for (const color of colors) {
+      const link = document.createElement('a');
+      link.setAttribute('href', 'javascript:;');
+      link.className = `${color}-color`;
+      const listElement = document.createElement('li');
+      listElement.appendChild(link);
+      colorTilesContainer.appendChild(listElement);
+    }
+
+    const pathComponents = window.location.pathname.split('/');
+    let text = '';
+    if (pathComponents[0]) {
+      text = strip_tags(pathComponents[0]).trimEnd();
+    } else {
+      const randomIndex = Math.random() * welcome_messages.length | 0;
+      text = welcome_messages[randomIndex];
+    }
+    text = text.replaceAll('\n', '<br />');
+    bigtext.innerHTML = text;
+
+    let color = pathComponents[1] ? pathComponents[1].replace(/[\/]+$/, '') : '';
+    if (!colors.includes(color)) {
+      const randomIndex = Math.random() * colors.length | 0;
+      color = colors[randomIndex];
+    }
+    document.body.className = `${color}-color`;
 })();
 </script>
 <script>
