--- a/cv/index.html
+++ b/cv/index.html
@@ -206,13 +206,13 @@ projects: [
     <div class=box>
       <h3>Skills</h3>
       <ul>
-        <li>Javascript (React, React Native, Webpack...)</li>
+        <li>JavaScript/TypeScript (React, React Native, Webpack...)</li>
         <li>Node.js (Express.js, Mongoose...)</li>
-        <li>Python (Django, Tornado)</li>
-        <li>HTML</li>
-        <li>CSS/SASS</li>
-        <li>PHP</li>
+        <li>Python (Django)</li>
+        <li>Postgresql</li>
+        <li>HTML + CSS/SASS</li>
         <li>iOS (Swift and Objective C)</li>
+        <li>PHP</li>
         <li>Rust</li>
         <li>Git</li>
         <li>Vim</li>
