--- a/ar/index.html
+++ b/ar/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -6,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: https://stianj.com/ar/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: https://stianj.com/ar/targets.mind; filterMinCF:0.0001; filterBeta: 10;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
 	    <img id="card" src="http://placekitten.com/200/200" />
 	    <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
@@ -27,19 +28,27 @@
         <a-entity
           position="0 0 0"
           rotation="0 0 0"
-          animation="property: position; to: 0 0 1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate;"
+          animation="property: position; to: 0 0 0.3; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate;"
         >
-          <a-gltf-model rotation="90 0 0" position="-0.38 0 0.1" scale="0.008 0.008 0.008" src="#bv"></a-gltf-model>
+          <a-gltf-model rotation="90 0 0" position="-0.38 0.3 0.1" scale="0.008 0.008 0.008" src="#bv"></a-gltf-model>
         </a-entity>
+        <a-plane
+          src="#card"
+          position="0 -0.2 0.1"
+          height="0.5"
+          width="0.5"
+          rotation="0 0 0"
+        ></a-plane>
         <a-entity
           position="0 0 0"
           rotation="0 0 0"
-          animation="property: position; to: 0 0 1; dur: 1500; easing: easeInOutQuad; loop: true; dir: alternate;"
+          animation="property: position; to: 0 0 0.2; dur: 1500; easing: easeInOutQuad; loop: true; dir: alternate;"
+          animation__2="property: rotation; to: 0 0 360; dur: 2000; easing: linear; loop: true;"
         >
           <a-icosahedron color="#FF926B" radius="0.05" position="-0.5 -0.5 0.2"></a-icosahedron>
-          <a-icosahedron color="#FF926B" radius="0.05" position="0.5 -0.5 0.2"></a-icosahedron>
-          <a-icosahedron color="#FF926B" radius="0.05" position="-0.5 0.5 0.2"></a-icosahedron>
-          <a-icosahedron color="#FF926B" radius="0.05" position="0.5 0.5 0.2"></a-icosahedron>
+          <a-icosahedron color="#6BFF92" radius="0.05" position="0.5 -0.5 0.2"></a-icosahedron>
+          <a-icosahedron color="#926BFF" radius="0.05" position="-0.5 0.5 0.2"></a-icosahedron>
+          <a-icosahedron color="#FF6B92" radius="0.05" position="0.5 0.5 0.2"></a-icosahedron>
         </a-entity>
       </a-entity>
     </a-scene>
